@@ -293,4 +293,8 @@ module ApplicationHelper
     path << "?#{options.to_param}"
     path
   end
+
+  def outdated_browser?
+    browser.ie? && browser.version.to_i < 10
+  end
 end
