@@ -20,3 +20,4 @@
           %li.visible-xs
             = link_to "Sign in", new_session_path(:user, redirect_to_referer: 'yes')
 
+= render 'shared/outdated_browser'
