@@ -6,6 +6,7 @@
       .content
         .login-title
           %h1= brand_title
+    = render 'shared/outdated_browser'
     %hr
     .container
       .content
