@@ -1,0 +1,8 @@
+- if outdated_browser?
+  - link = "https://gitlab.com/gitlab-org/gitlab-ce/blob/master/doc/install/requirements.md#supported-web-browsers"
+  .browser-alert
+    GitLab may not work properly because you are using an outdated web browser.
+    %br
+    Please install a
+    = link_to 'supported web browser', link
+    for a better experience.
